# Librarian

./: .dockerignore  .gitignore  .gitmodules  404.html  Cargo.toml  Dockerfile  README.md  build-dockerfile.sh  build-release.sh  index.html  local-cli.dockerfile  mkdocs.yml  run-cli.sh  run.sh
.github/workflows/: docs.yml  rust.yml
citation/: index.html
cli/: Cargo.toml  README.md  index.html
cli/src/: main.rs
data/: placeholder_code_for_graph_210730.R
docs/: citation.md  faqs.md  index.md  installation.md  usage.md
faqs/: index.html
fastq2comp/: .gitignore  Cargo.toml  README.md
fastq2comp/data/: example_gds.txt  results_example_gds.txt  results_gds_210408.txt  retrieve_query_urls.pl
fastq2comp/data/download-extract/: ci-download-extract.sh  download-extract.sh  sample_srr.py
fastq2comp/examples/extract-comp/: extract-example-comp.sh  in.fastq  main.rs
fastq2comp/src/: extract_comp.rs  lib.rs
frontend/: .gitignore  Cargo.toml  HOW_TO_BUILD.md  README.md  build.sh  index.html  package-lock.json  package.json  webpack.config.js
frontend/js/: exports.js  index.js  worker.js
frontend/src/: extract_comp.rs  lib.rs  utils.rs
frontend/static/: index.css  index.html
installation/: index.html
scripts/: placeholder_code_for_graph_210726.R  setup.r
search/: search_index.json
server/: Cargo.toml  README.md  index.html
server/data/: output_210709.tsv  output_search_18_19_20_filtered.tsv
server/scripts/: Librarian_analysis.Rmd  Librarian_analysis_raw.R  exec_analysis.sh  exec_raw_analysis.sh  librarian_plotting_multi_server_220304.R  librarian_plotting_multi_server_220606.R  librarian_plotting_server_220107.R  librarian_plotting_test_samples_server_220623.R  placeholder_code_for_graph_210726.R
server/scripts/Librarian/: .Rhistory  Librarian_offline_analysis.Rmd  librarian_offline_analysis.R  test_library_composition_5.txt  test_library_predictions.txt
server/scripts/compositions_umap/20220623T170807Z-a8622/: compositions_umap.rds  data.txt
server/scripts/compositions_umap_results/20220623T170809Z-007ce/: compositions_umap_results.rds  data.txt
server/src/: lib.rs  main.rs  script_paths.rs  tempdir.rs
src/: main.rs
static/: 1.js  1.worker.js  index.css  index.html  index.js  worker.worker.js
usage/: index.html
