[package]
name = "librarian-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"]}
fastq2comp = { git = "https://github.com/ChristelKrueger/Library_Base_Compositions", tag = "v0.5.0"}
structopt = "0.3"
log = "0.4"
base64 = "0.13"
tokio = { version = "1.17.0", features = ["macros"] }
colored = "2.0"
time = { version = "0.3", features = ["formatting"] }
librarian-server = {path = "../server"}
simple_logger = "2.1.0"