[package]
name = "cli"
version = "1.0.0"
edition = "2018"
authors = ["Kartavya Vashishtha <sendtokartavya@gmail.com>"]
description = "A tool to predict the sequencing library type from the base composition of a supplied FastQ file. Uncompresses .gz files when reading."
readme = "https://github.com/DesmondWillowbrook/Librarian#readme"
repository = "https://github.com/DesmondWillowbrook/Librarian"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"]}
fastq2comp = { path = "../fastq2comp"}
structopt = "0.3"
log = "0.4"
tokio = { version = "1.17.0", features = ["macros"] }
colored = "2.0"
time = { version = "0.3", features = ["formatting"] }
server = {path = "../server"}
simple_logger = "2.1.0"