[package]
name = "cli"
version = "1.0.3"
edition = "2018"
authors = ["Kartavya Vashishtha <sendtokartavya@gmail.com>"]
description = "A tool to predict the sequencing library type from the base composition of a supplied FastQ file. Uncompresses .gz files when reading."
license = "GPL-3.0"
readme = "https://github.com/DesmondWillowbrook/Librarian#readme"
repository = "https://github.com/DesmondWillowbrook/Librarian"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls", "gzip"]}
fastq2comp = { path = "../fastq2comp"}
structopt = "0.3"
log = "0.4"
colored = "2.0"
server = {path = "../server"}
simple_logger = "2.1.0"