[package]
name = "fastq2comp"
version = "0.5.0"
authors = ["Kartavya Vashishtha <sendtokartavya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
regex = "1"
flate2 = "1.0.20"
lazy_static = "1.4.0" # Useful for global Regex check
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
reservoir-sampling = "^0.5.*" 