[package]
name = "librarian-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.126"
serde_json = "1.0.64"
fastq2comp = { git = "https://github.com/ChristelKrueger/Library_Base_Compositions", tag = "v0.4.0" }
futures = "0.3.16"
log = "0.4.14"
simple_logger = "1.13.0"
actix-files = "0.5.0"
thiserror = "1.0.30"
structopt = "0.3.26"
