[package]
name = "librarian-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastq2comp = { path = "../fastq2comp"}
futures = "0.3"
log = "0.4"
simple_logger = "1.13"
actix-files = "0.5"
base64 = "0.13"
thiserror = "1.0"
structopt = "0.3"
