[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
fastq2comp = { path = "../fastq2comp"}
futures = "0.3.21"
log = "0.4.17"
simple_logger = "2.1.0"
actix-files = "0.6.1"
thiserror = "1.0.31"
structopt = "0.3.26"
